--- a/app/src/main/res/layout/activity_shop_item.xml
+++ b/app/src/main/res/layout/activity_shop_item.xml
@@ -5,7 +5,7 @@
     android:id="@+id/shop_item_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ShopItemActivity"
+    tools:context=".presentation.modify_item.ShopItemActivity"
     tools:layout="@layout/fragment_shop_item">
 
 
